--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="newsBox">
             <b>8/20/19</b><br>
             <span class="newsText">I am pleased to announce the launch of classic-loot.com! On this page you can see the dungeon drops for each class by selecting the class icon below. The gear is priortized by armor type (That means no cloth in
-            the paladin tables). These are not best in slot lists, and isn't meant to be the be a casual list of gear you can obtain through dungeons and PvP. This is data scraped from the orignal class loot lists from the Vanilla era. Enjoy this blast
+            the paladin tables). These are not best in slot lists, and is meant to be the be a casual list of gear you can obtain through dungeons and PvP. This is data scraped from the orignal class loot lists from the Vanilla era. Enjoy this blast
             from the past, and if you enjoy the content, feel free to check out my stream when Classic launches on August 27th at <span id ="twitchLink">twitch.tv/kidcolfax</span>
             </span>
         </div>
