--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <div id="chooseClassText">Select a class</div>
             <div id="druidLogo" class="classLogo" onclick="druidLoad()"></div>
             <div id="hunterLogo" class="classLogo" onclick="hunterLoad()"></div>
-            <div id="mageLogo" class="classLogo" onclick="mageLoad()"></div>
-            <div id="paladinLogo" class="classLogo" onclick="paladinLoad()"></div><br>
+            <div id="mageLogo" class="classLogo" onclick="mageLoad()"></div><br>
+            <div id="paladinLogo" class="classLogo" onclick="paladinLoad()"></div>
             <div id="priestLogo" class="classLogo" onclick="priestLoad()"></div>
-            <div id="rogueLogo" class="classLogo" onclick="rogueLoad()"></div>
+            <div id="rogueLogo" class="classLogo" onclick="rogueLoad()"></div><br>
             <div id="shamanLogo" class="classLogo" onclick="shamanLoad()"></div>
             <div id="warlockLogo" class="classLogo" onclick="warlockLoad()"></div>
             <div id="warriorLogo" class="classLogo" onclick="warriorLoad()"></div>
