--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
         <div id="headerLogo"></div>
         <span id="newsTitle">NEWS</span>
         <div id="newsBox">
-            <b>8/20/19</b><br>
-            <span class="newsText">I am pleased to announce the launch of classic-loot.com! On this page you can see the dungeon drops for each class by selecting the class icon below. The gear is priortized by armor type (That means no cloth in
-            the paladin tables). These are not best in slot lists, and is meant to be the be a casual list of gear you can obtain through dungeons and PvP. This is data scraped from the orignal class loot lists from the Vanilla era. Enjoy this blast
-            from the past, and if you enjoy the content, feel free to check out my stream when Classic launches on August 27th at <span id ="twitchLink">twitch.tv/kidcolfax</span>
+            <b>8/21/19</b><br>
+            <span class="newsText">Thanks for checking out classic-loot.com. If you enjoy the site and want to support me, you can check out my Classic stream starting August 26th at <b><a href="twitch.tv/kidcolfax">twitch.tv/kidcolfax</a></b>!
             </span>
         </div>
         <div id="classBar">
