--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -12,39 +13,47 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <script src="https://kit.fontawesome.com/1c83563a45.js"></script>
 </head>
 
 <body>
     <div id="header">
         <div id="headerLogo"></div>
-        <span id="newsTitle">NEWS</span>
-        <div id="newsBox">
-            <b>8/21/19</b><br>
-            <span class="newsText">Thanks for checking out classic-loot.com. If you enjoy the site and want to support me, you can check out my Classic stream starting August 26th at <b><a href="twitch.tv/kidcolfax">twitch.tv/kidcolfax</a></b>!
+        <div id="socialBox"><span id='twitch'><i class="fab fa-twitch"></i> twitch.tv/kidcolfax</span><span id='twitter'><i class="fab fa-twitter"></i> @kidcolfax</div></span>
+            <span id="newsTitle">NEWS</span>
+            <div id="newsBox">
+                <b>8/21/19</b><br>
+                <span class="newsText">Thanks for checking out classic-loot.com. If you enjoy the site and want to support me, you can check out my Classic stream starting August 26th at <b><a href="https://twitch.tv/kidcolfax">twitch.tv/kidcolfax</a></b>!
             </span>
+            </div>
+            <div id="classBar">
+                <div id="chooseClassText">Select a class</div>
+                <div id="druidLogo" class="classLogo" onclick="druidLoad()"></div>
+                <div id="hunterLogo" class="classLogo" onclick="hunterLoad()"></div>
+                <div id="mageLogo" class="classLogo" onclick="mageLoad()"></div>
+                <div id="paladinLogo" class="classLogo" onclick="paladinLoad()"></div>
+                <div id="priestLogo" class="classLogo" onclick="priestLoad()"></div>
+                <div id="rogueLogo" class="classLogo" onclick="rogueLoad()"></div>
+                <div id="shamanLogo" class="classLogo" onclick="shamanLoad()"></div>
+                <div id="warlockLogo" class="classLogo" onclick="warlockLoad()"></div>
+                <div id="warriorLogo" class="classLogo" onclick="warriorLoad()"></div>
+            </div>
+
         </div>
-        <div id="classBar">
-            <div id="chooseClassText">Select a class</div>
-            <div id="druidLogo" class="classLogo" onclick="druidLoad()"></div>
-            <div id="hunterLogo" class="classLogo" onclick="hunterLoad()"></div>
-            <div id="mageLogo" class="classLogo" onclick="mageLoad()"></div><br>
-            <div id="paladinLogo" class="classLogo" onclick="paladinLoad()"></div>
-            <div id="priestLogo" class="classLogo" onclick="priestLoad()"></div>
-            <div id="rogueLogo" class="classLogo" onclick="rogueLoad()"></div><br>
-            <div id="shamanLogo" class="classLogo" onclick="shamanLoad()"></div>
-            <div id="warlockLogo" class="classLogo" onclick="warlockLoad()"></div>
-            <div id="warriorLogo" class="classLogo" onclick="warriorLoad()"></div>
-        </div>
-
-    </div>
 
 
-    <div class="accordion" id="accordionExample"></div>
-    <div id="footer"></div>
+        <div class="accordion" id="accordionExample"></div>
+        <div id="footer"></div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
