social links added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div id="header">
         <div id="headerLogo"></div>
-        <div id="socialBox"><span id='twitch'><i class="fab fa-twitch"></i> twitch.tv/kidcolfax</span><span id='twitter'><i class="fab fa-twitter"></i> @kidcolfax</div></span>
+        <div id="socialBox"><a href="https://twitch.tv/kidcolfax"><span id='twitch'> <i class="fab fa-twitch"></i> twitch.tv/kidcolfax</span></a><a href="https://twitter.com/kidcolfax"><span id='twitter'><i class="fab fa-twitter"></i>@kidcolfax</div></span></a>
             <span id="newsTitle">NEWS</span>
             <div id="newsBox">
                 <b>8/21/19</b><br>
