--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <span id="newsTitle">NEWS</span>
             <div id="newsBox">
                 <b>8/23/19</b><br>
-                <span class="newsText">Thanks for checking out classic-loot.com. If you enjoy the site and want to support me, you can check out my Classic stream starting August 26th at <b><a href="https://twitch.tv/kidcolfax">twitch.tv/kidcolfax</a></b>!
+                <span class="newsText">Thanks for checking out classic-loot.com. If you enjoy the site and want to support me, you can check out my Classic stream starting August 26th at <b><a href="https://twitch.tv/kidcolfax">twitch.tv/kidcolfax
+                </a></b>! Here you will find dungeon loot lists for each class. This is a remake of an old website that was widely used in Vanilla, and these lists are far from optimized. So if you're looking for BiS lists, you are in the wrong place!
             </span>
             </div>
             <div id="classBar">
