--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <body>
     <div id="header">
         <div id="headerLogo"></div>
+        <div id="cll">CLASS LOOT LISTS</div>
+
         <div id="socialBox"><a href="https://twitch.tv/kidcolfax"><span id='twitch'> <i class="fab fa-twitch"></i> twitch.tv/kidcolfax</span></a><a href="https://twitter.com/kidcolfax"><span id='twitter'><i class="fab fa-twitter"></i>@kidcolfax</div></span></a>
             <span id="newsTitle">NEWS</span>
             <div id="newsBox">
